# glory

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  _current_report.md  _improve.md  _improve_desktop_tasks.md  _improve_hot_reload_tasks.md  _improve_todos.md  _m2_reactivity_tasks.md  _m3_renderer_tasks.md  _m5_hot_reload_tasks.md  _report.md  _todos.md
benchmarks/dioxus/: Cargo.toml  index.html
benchmarks/dioxus/src/: main.rs
benchmarks/glory/: Cargo.toml  index.html
benchmarks/glory/src/: main.rs
crates/actix-adapter/: Cargo.toml
crates/actix-adapter/src/: lib.rs
crates/actix-adapter/tests/: render.rs
crates/axum-adapter/: Cargo.toml
crates/axum-adapter/src/: lib.rs
crates/axum-adapter/tests/: render.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: launch.rs  lib.rs  logger.rs  main.rs  readme.md  tests.rs
crates/cli/src/command/: build.rs  bundle.rs  check.rs  clean.rs  completions.rs  config_cmd.rs  doctor.rs  end2end.rs  fmt.rs  mod.rs  new.rs  self_update.rs  serve.rs  ssg.rs  watch.rs
crates/cli/src/compile/: assets.rs  change.rs  front.rs  mobile.rs  mod.rs  progress.rs  sass.rs  server.rs  style.rs  tailwind.rs  tests.rs
crates/cli/src/config/: assets.rs  bin_package.rs  cli.rs  dotenvs.rs  end2end.rs  lib_package.rs  mod.rs  overrides.rs  project.rs  style.rs  tailwind.rs  tests.rs
crates/cli/src/config/snapshots/: glory_cli__config__tests__project.snap  glory_cli__config__tests__workspace.snap  glory_cli__config__tests__workspace_in_subdir_project2.snap  glory_cli__config__tests__workspace_project1.snap  glory_cli__config__tests__workspace_project2.snap
crates/cli/src/ext/: anyhow.rs  cargo.rs  exe.rs  fs.rs  mod.rs  path.rs  sync.rs  util.rs
crates/cli/src/service/: notify.rs  patch.rs  reload.rs  serve.rs  site.rs
crates/cli/src/signal/: interrupt.rs  product.rs  reload.rs
crates/cli/templates/mobile/: README.md
crates/core/: Cargo.toml
crates/core/benches/: command_wire.rs  each_reorder.rs  event_handlers.rs  scheduler.rs  ssr_stream.rs
crates/core/src/: assets.rs  config.rs  console.rs  devtools.rs  holder.rs  lib.rs  scope.rs  spawn.rs  stream_ssr.rs  truck.rs  view.rs  widget.rs
crates/core/src/node/: mod.rs  ssr.rs
crates/core/src/reflow/: bond.rs  cage.rs  effect.rs  lotus.rs  mod.rs  owner.rs  scheduler.rs  storage.rs  store.rs
crates/core/src/renderer/: command.rs  command_dom.rs  mod.rs  ssr_dom.rs
crates/core/src/web/: attr.rs  class.rs  csr.rs  mod.rs  prop.rs  style.rs
crates/core/src/widgets/: each.rs  error_boundary.rs  loader.rs  mod.rs  snapshot_tests.rs  suspense.rs  switch.rs
crates/core/tests/: command_backend.rs  wasm_behavior.rs  wasm_csr_smoke.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: lib.rs  runtime.rs  wry_interpreter.js
crates/desktop/templates/tauri/: README.md
crates/glory/: Cargo.toml
crates/glory/src/: lib.rs  test_styles.module.css
crates/glory/tests/: routable_derive.rs  store_derive.rs
crates/hot-reload/: Cargo.toml  README.md
crates/hot-reload/examples/: builder_relink.rs
crates/hot-reload/src/: diff.rs  lib.rs  node.rs  parsing.rs  patch.js  relink.rs  state.rs
crates/liveview/: Cargo.toml
crates/liveview/src/: lib.rs  liveview_client.js
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/native/: Cargo.toml
crates/native/src/: blitz_consumer.rs  image_provider.rs  lib.rs
crates/native/tests/: screenshot.rs
crates/routing/: Cargo.toml
crates/routing/src/: aviator.rs  graff.rs  lib.rs  locator.rs  regex.rs  router.rs  typed.rs
crates/routing/src/aviators/: browser.rs  memory.rs  mod.rs  scroll.rs  server.rs  url_hash.rs
crates/routing/src/filters/: mod.rs  opts.rs  path.rs
crates/routing/src/url/: csr.rs  mod.rs  ssr.rs
crates/routing/tests/: derive_routes.rs  navigation.rs
crates/salvo-adapter/: Cargo.toml
crates/salvo-adapter/src/: lib.rs
crates/salvo-adapter/tests/: render.rs
crates/serverfn/: Cargo.toml
crates/serverfn/src/: lib.rs
crates/serverfn/tests/: server_fn.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
examples/: Cargo.toml  _README.md
examples/counter/: Cargo.toml  index.html
examples/counter/src/: main.rs  server.rs
examples/counters/: Cargo.toml
examples/counters/src/: main.rs
examples/desktop-counter/: Cargo.toml
examples/desktop-counter/src/: main.rs
examples/each-bench/: Cargo.toml  README.md
examples/each-bench/src/: main.rs
examples/file-upload/: Cargo.toml  README.md  index.html
examples/file-upload/src/: app.rs  main.rs  upload.rs
examples/forms-showcase/: Cargo.toml
examples/forms-showcase/src/: main.rs
examples/hackernews-salvo/: Cargo.toml  Dockerfile  compose.yml
examples/hackernews-salvo/.cargo/: config.toml
examples/hackernews-salvo/src/: main.rs  models.rs  post.rs
examples/hackernews-salvo/src/routers/: app.rs
examples/hackernews-salvo/src/views/: mod.rs  nav.rs  story.rs  user.rs
examples/hackernews-salvo/styles/: main.scss
examples/liveview-salvo/: Cargo.toml  README.md
examples/liveview-salvo/src/: main.rs
examples/mobile-counter/: Cargo.toml
examples/mobile-counter/src/: lib.rs
examples/project/: Cargo.toml
examples/realtime-notify/: Cargo.toml  README.md
examples/realtime-notify/src/: app.rs  main.rs  notify.rs  server_ws.rs
examples/router-basic/: Cargo.toml  index.html  package.json
examples/router-basic/src/: app.rs  main.rs
examples/ssr-modes-salvo/: Cargo.toml
examples/ssr-modes-salvo/src/: app.rs  main.rs  models.rs  post.rs
examples/ssr-simple-salvo/: Cargo.toml
examples/ssr-simple-salvo/src/: app.rs  main.rs
examples/tailwind-salvo/: Cargo.toml  package.json  tailwind.config.js
examples/tailwind-salvo/src/: app.rs  main.rs
examples/todomvc/: Cargo.toml  index.html
examples/todomvc-fullstack/: Cargo.toml
examples/todomvc-fullstack/src/: api.rs  app.rs  main.rs
examples/todomvc/src/: main.rs
examples/workspace/: Cargo.toml
examples/workspace/project1/front/: Cargo.toml
examples/workspace/project1/server/: Cargo.toml
examples/workspace/project2/: Cargo.toml
(+94 files in other folders)
