[workspace]
members = ["crates/*"]
# members = ["crates/core", "crates/glory", "examples/counter", "examples/counters", "examples/todo"]
exclude = ["examples"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
rust-version = "1.73"
description = """
Glory is an experimental rust web front framework.
"""
homepage = "https://glory.rs"
repository = "https://github.com/glory-rs/glory"
documentation = "https://docs.rs/glory/"
readme = "./README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]

[workspace.dependencies]
glory-core = { version = "0.2.0", path = "crates/core", default-features = false }#
glory-routing = { version = "0.2.0", path = "crates/routing", default-features = false }
glory-hot-reload = { version = "0.2.0", path = "crates/hot-reload" }

anyhow = "1"
async-trait = "0.1.42"
base64 = "0.21"
cfg-if = "1"
config = { version = "0.13", default-features = false, features = ["toml"] }
educe = "0.4"
form_urlencoded = "1"
futures = "0.3"
futures-channel = { version = "0.3", default-features = true }
indexmap = "2.0"
js-sys = "0.3"
multimap = "0.9"
once_cell = "1.5.2"
parking_lot = "0.12"
paste = "1"
percent-encoding = "2"
path-slash = "0.2"
regex = "1"
salvo = { version = "0.58", default-features = true }    
serde = { version = "1" }
serde_json = { version = "1" }    
smallvec = "1"
thiserror = "1"                            
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
# tracing-subscriber = "0.3"
url = "2"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.31"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Comment",
  "Document",
  "DomTokenList",
  "Location",
  "Range",
  "Text",
  "HtmlCollection",
  "TreeWalker",

  "DocumentFragment",
  "Element",
  "HtmlTemplateElement",
  "NodeList",
  "Window",

  # Events we cast to in glory_macro -- added here so we don't force users to import them
  "AnimationEvent",
  "BeforeUnloadEvent",
  "ClipboardEvent",
  "CompositionEvent",
  "DeviceMotionEvent",
  "DeviceOrientationEvent",
  "DragEvent",
  "ErrorEvent",
  "FocusEvent",
  "GamepadEvent",
  "HashChangeEvent",
  "InputEvent",
  "KeyboardEvent",
  "MessageEvent",
  "MouseEvent",
  "PageTransitionEvent",
  "PointerEvent",
  "PopStateEvent",
  "ProgressEvent",
  "PromiseRejectionEvent",
  "SecurityPolicyViolationEvent",
  "StorageEvent",
  "SubmitEvent",
  "TouchEvent",
  "TransitionEvent",
  "UiEvent",
  "WheelEvent",


  # HTML Element Types
  "HtmlHtmlElement",
  "HtmlBaseElement",
  "HtmlHeadElement",
  "HtmlLinkElement",
  "HtmlMetaElement",
  "HtmlStyleElement",
  "HtmlTitleElement",
  "HtmlBodyElement",
  "HtmlHeadingElement",
  "HtmlQuoteElement",
  "HtmlDivElement",
  "HtmlDListElement",
  "HtmlHrElement",
  "HtmlLiElement",
  "HtmlOListElement",
  "HtmlParagraphElement",
  "HtmlPreElement",
  "HtmlUListElement",
  "HtmlAnchorElement",
  "HtmlBrElement",
  "HtmlDataElement",
  "HtmlQuoteElement",
  "HtmlSpanElement",
  "HtmlTimeElement",
  "HtmlAreaElement",
  "HtmlAudioElement",
  "HtmlImageElement",
  "HtmlMapElement",
  "HtmlTrackElement",
  "HtmlVideoElement",
  "HtmlEmbedElement",
  "HtmlIFrameElement",
  "HtmlObjectElement",
  "HtmlParamElement",
  "HtmlPictureElement",
  "HtmlSourceElement",
  "SvgElement",
  "HtmlCanvasElement",
  "HtmlScriptElement",
  "HtmlModElement",
  "HtmlTableCaptionElement",
  "HtmlTableColElement",
  "HtmlTableColElement",
  "HtmlTableElement",
  "HtmlTableSectionElement",
  "HtmlTableCellElement",
  "HtmlTableSectionElement",
  "HtmlTableCellElement",
  "HtmlTableSectionElement",
  "HtmlTableRowElement",
  "HtmlButtonElement",
  "HtmlDataListElement",
  "HtmlFieldSetElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlLegendElement",
  "HtmlMeterElement",
  "HtmlOptGroupElement",
  "HtmlOutputElement",
  "HtmlProgressElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlMenuElement",
  "HtmlSlotElement",
  "HtmlTemplateElement",
  "HtmlOptionElement",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
