[workspace]
members = ["crates/*"]
# members = ["crates/core", "crates/glory", "examples/counter", "examples/counters", "examples/todo"]
exclude = ["examples"]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Chrislearn Young <chris@acroidea.com>"]
edition = "2024"
# MSRV policy: bumped to match Rust edition 2024 (stabilised in 1.85);
# 1.88 is chosen because workspace dependencies (config 0.15, clap 4.6,
# etc.) require it. Bumping this in a new commit is a SemVer-minor
# change for Glory itself.
rust-version = "1.88"
description = """
Glory is an experimental rust web front framework.
"""
homepage = "https://glory.rs"
repository = "https://github.com/glory-rs/glory"
documentation = "https://docs.rs/glory/"
readme = "./README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = [
  "web-programming::http-server",
  "web-programming::websocket",
  "network-programming",
  "asynchronous",
]

[workspace.dependencies]
glory-core = { version = "0.3.1", path = "crates/core", default-features = false }       #
glory-routing = { version = "0.3.1", path = "crates/routing", default-features = false }
glory-hot-reload = { version = "0.3.1", path = "crates/hot-reload" }

anyhow = "1"
actix-web = "4"
async-trait = "0.1.89"
axum = "0.8"
base64 = "0.22"
cfg-if = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }
educe = "0.6"
form_urlencoded = "1"
futures = "0.3"
futures-channel = { version = "0.3", default-features = true }
indexmap = "2.14"
js-sys = "0.3"
multimap = "0.10"
once_cell = "1.21.4"
parking_lot = "0.12"
paste = "1"
percent-encoding = "2"
path-slash = "0.2"
regex = "1"
salvo = { version = "0.93", default-features = true }
serde = { version = "1" }
serde_json = { version = "1" }
slab = "0.4"
smallvec = "1"
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
# tracing-subscriber = "0.3"
url = "2"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.71"
wasm-bindgen-test = "0.3"

# cli dependencies
ansi_term = "0.12"
brotli = { version = "8.0", features = ["default"] }
bytes = "1.11"
camino = "1.2"
cargo_metadata = { version = "0.23", features = ["builder"] }
clap = { version = "4.6", features = ["derive"] }
derive_more = { version = "2", features = ["display"] }
dirs = "6.0"
dotenvy = "0.15"
dunce = "1.0"
flate2 = "1.1"
flexi_logger = "0.31"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
insta = { version = "1.47.2", features = ["yaml"] }
itertools = "0.14"
lightningcss = { version = "1.0.0-alpha.71", features = ["browserslist"] }
log = "0.4"
notify = "8"
reqwest = { version = "0.13", features = ["blocking", "native-tls", "json"], default-features = false }
ratatui = "0.29"
seahash = "4.1"
semver = "1.0.28"
tar = "0.4"
temp-dir = "0.2"
wasm-bindgen-cli-support = "0.2"
which = "8.0"
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = { version = "0.13", default-features = true }

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Comment",
  "Document",
  "DomTokenList",
  "Location",
  "Range",
  "Text",
  "HtmlCollection",
  "TreeWalker",

  "DocumentFragment",
  "Element",
  "HtmlTemplateElement",
  "NodeList",
  "Window",

  # Events we cast to in glory_macro -- added here so we don't force users to import them
  "AnimationEvent",
  "BeforeUnloadEvent",
  "ClipboardEvent",
  "CompositionEvent",
  "DeviceMotionEvent",
  "DeviceOrientationEvent",
  "DragEvent",
  "ErrorEvent",
  "FocusEvent",
  "GamepadEvent",
  "HashChangeEvent",
  "InputEvent",
  "KeyboardEvent",
  "MessageEvent",
  "MouseEvent",
  "PageTransitionEvent",
  "PointerEvent",
  "PopStateEvent",
  "ProgressEvent",
  "PromiseRejectionEvent",
  "SecurityPolicyViolationEvent",
  "StorageEvent",
  "SubmitEvent",
  "TouchEvent",
  "TransitionEvent",
  "UiEvent",
  "WheelEvent",


  # HTML Element Types
  "HtmlHtmlElement",
  "HtmlBaseElement",
  "HtmlHeadElement",
  "HtmlLinkElement",
  "HtmlMetaElement",
  "HtmlStyleElement",
  "HtmlTitleElement",
  "HtmlBodyElement",
  "HtmlHeadingElement",
  "HtmlQuoteElement",
  "HtmlDivElement",
  "HtmlDListElement",
  "HtmlHrElement",
  "HtmlLiElement",
  "HtmlOListElement",
  "HtmlParagraphElement",
  "HtmlPreElement",
  "HtmlUListElement",
  "HtmlAnchorElement",
  "HtmlBrElement",
  "HtmlDataElement",
  "HtmlQuoteElement",
  "HtmlSpanElement",
  "HtmlTimeElement",
  "HtmlAreaElement",
  "HtmlAudioElement",
  "HtmlImageElement",
  "HtmlMapElement",
  "HtmlTrackElement",
  "HtmlVideoElement",
  "HtmlEmbedElement",
  "HtmlIFrameElement",
  "HtmlObjectElement",
  "HtmlParamElement",
  "HtmlPictureElement",
  "HtmlSourceElement",
  "SvgElement",
  "HtmlCanvasElement",
  "HtmlScriptElement",
  "HtmlModElement",
  "HtmlTableCaptionElement",
  "HtmlTableColElement",
  "HtmlTableColElement",
  "HtmlTableElement",
  "HtmlTableSectionElement",
  "HtmlTableCellElement",
  "HtmlTableSectionElement",
  "HtmlTableCellElement",
  "HtmlTableSectionElement",
  "HtmlTableRowElement",
  "HtmlButtonElement",
  "HtmlDataListElement",
  "HtmlFieldSetElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlLegendElement",
  "HtmlMeterElement",
  "HtmlOptGroupElement",
  "HtmlOutputElement",
  "HtmlProgressElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlMenuElement",
  "HtmlSlotElement",
  "HtmlTemplateElement",
  "HtmlOptionElement",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.lints.rust]
# Glory's core does not need `unsafe`. The wasm-bindgen / web-sys path
# already routes through safe wrappers. Lift this to `forbid` once the
# generational-box redesign confirms it stays that way.
unsafe_code = "deny"
# We're on edition 2024; surface anything that would block a future
# edition upgrade so it shows up at PR time rather than years later.
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Pragmatic baseline: warn on everything in the standard clippy set,
# but don't fail the build. Individual crates can override per-lint.
all = { level = "warn", priority = -1 }
# These trigger on common builder-pattern code that's idiomatic in
# Glory; the noise outweighs the benefit.
needless_return = "allow"
new_without_default = "allow"
type_complexity = "allow"
# Closure-heavy callsites generate a lot of these on stable Rust.
needless_lifetimes = "allow"
too_many_arguments = "allow"
