[workspace]
members = ["*"]
exclude = ["target"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
publish = false
rust-version = "1.65"
description = """
"""
homepage = "https://glory.rs"
repository = "https://github.com/glory-rs/glory"
documentation = "https://docs.rs/glory/"
readme = "./README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]

[workspace.dependencies]
glory = { path = "../crates/glory", default-features = false}
gloo-net = {version = "0.4", default-features = true }
anyhow = "1"
async-stream = "0.3.5"
cfg-if = "1"
futures-util = { version = "0.3", default-features = true }
once_cell = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.1"
url = "2"
chrono = "0.4"
salvo = { version = "0.58", default-features = true }
reqwest ={ version = "0.11", default-features = false }

web-sys = "=0.3.64"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.31"
