[package]
name = "glory-axum"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Axum adapter for Glory SSR."
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory-axum/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
glory-core = { workspace = true, features = ["web-ssr"] }

[lints]
workspace = true
