[package]
name = "glory-cli"
license = "MIT"
repository = { workspace = true }
description = "Build tool for Glory."
categories = ["development-tools", "wasm", "web-programming"]
keywords = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "glory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
log = "0.4"
flexi_logger = "0.27"
lightningcss = { version = "1.0.0-alpha.47", features = ["browserslist"] }
salvo = { workspace = true, features = ["websocket"] }
tokio = { version = "1.4", default-features = false, features = ["full"] }
# not using notify 5.0 because it uses Crossbeam which has an issue with tokio
notify = "4"
once_cell ={ workspace = true }
which = "4.4"
cargo_metadata = { version = "0.18", features = ["builder"] }
serde_json = "1.0"
wasm-bindgen-cli-support = "0.2"
ansi_term = "0.12"

seahash = "4.1"
reqwest = { version = "0.11", features = ["blocking", "__tls", "default-tls", "native-tls-crate", "json"], default-features = false }
dirs = "5.0"
camino = "1.1"
dotenvy = "0.15"
itertools = "0.11"
derive_more = "0.99"
flate2 = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tar = "0.4"
dunce = "1.0"
bytes = "1.4"
# glory-hot-reload = { git = "https://github.com/glory-rs/glory", version = "0.4.8" }
glory-hot-reload = { workspace = true }
semver = "1.0.18"
async-trait = "0.1.72"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
temp-dir = "0.1"

[features]
full_tests = []
no_downloads = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
