[package]
name = "glory-cli"
license = "MIT"
repository = { workspace = true }
description = "Build tool for Glory."
categories = ["development-tools", "wasm", "web-programming"]
keywords = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "glory"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = { workspace = true }
async-trait = "0.1.72"
brotli = { version = "3.4", features = ["default"] }
bytes = "1.4"
camino = "1.1"
cargo_metadata = { version = "0.18", features = ["builder"] }
clap = { version = "4.0", features = ["derive"] }
derive_more = "0.99"
dirs = "5.0"
dotenvy = "0.15"
dunce = "1.0"
flate2 = "1.0"
flexi_logger = "0.27"
# glory-hot-reload = { git = "https://github.com/glory-rs/glory", version = "0.4.8" }
glory-hot-reload = { workspace = true }
itertools = "0.11"
lightningcss = { version = "1.0.0-alpha.51", features = ["browserslist"] }
log = "0.4"
# not using notify 5.0 because it uses Crossbeam which has an issue with tokio
notify = "4"
once_cell ={ workspace = true }
reqwest = { version = "0.11", features = ["blocking", "__tls", "default-tls", "native-tls-crate", "json"], default-features = false }
salvo = { workspace = true, features = ["websocket"] }
seahash = "4.1"
semver = "1.0.18"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.4", default-features = false, features = ["full"] }
wasm-bindgen-cli-support = "0.2"
which = "5.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
zstd = { version = "0.13", features = ["default"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
temp-dir = "0.1"

[features]
full_tests = []
no_downloads = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
