[package]
name = "glory-cli"
license = "MIT"
repository = { workspace = true }
description = "Build tool for Glory."
categories = ["development-tools", "wasm", "web-programming"]
keywords = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "glory"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
dunce = { workspace = true }
flate2 = { workspace = true }
flexi_logger = { workspace = true }
glory-hot-reload = { workspace = true }
itertools = { workspace = true }
lightningcss = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
salvo = { workspace = true, features = ["websocket"] }
seahash = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
wasm-bindgen-cli-support = { workspace = true }
which = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
temp-dir = { workspace = true }

[features]
full_tests = []
no_downloads = []