[package]
name = "glory-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory-core/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[features]
default = ["web-csr"]
web-csr = ["__single_holder", "dep:wasm-bindgen"]
web-ssr = ["dep:tokio", "dep:tokio-util", "dep:xml-rs", "dep:futures-channel"]
salvo = ["dep:salvo", "web-ssr"]
__single_holder = []

[dependencies]
async-trait = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }
# tracing-subscriber = {workspace = true}
wasm-bindgen = { workspace = true, optional = true }
cfg-if = { workspace = true }
paste = { workspace = true }
smallvec = { workspace = true }
educe = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
indexmap = { workspace = true }
multimap = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-util = { workspace = true, optional = true, features = ["rt"] }
salvo = { workspace = true, optional = true }
glory-hot-reload = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
xml-rs = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
percent-encoding = { workspace = true }

[package.metadata.cargo-all-features]
denylist = ["stable"]
skip_feature_sets = [["web-ssr", "web-csr"]]