[package]
name = "glory-desktop"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Desktop webview host for Glory: runs a widget tree against a wry webview via the command stream."
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory-desktop/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
glory-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tao = { version = "0.35", optional = true }
wry = { version = "0.55", optional = true }
tungstenite = { version = "0.29.0", optional = true }
glory-hot-reload = { version = "0.3.1", path = "../hot-reload" }
muda = { version = "0.19.2", optional = true }

[lints]
workspace = true

[features]
default = []
# CommandHolder + real event listeners (glory-core `backend-command`).
# Off by default to keep wry/tao and the EventData event typing out of
# plain workspace builds; app crates enable `runtime`.
backend = ["glory-core/backend-command"]
# The tao + wry window host (`glory_desktop::launch`).
runtime = ["backend", "dep:wry", "dep:tao", "dep:tungstenite", "dep:muda"]
