[package]
name = "glory"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["web-ssr", "backend-command", "routing", "server-fn"]

[badges]
codecov = { repository = "glory-rs/glory", branch = "main", service = "github" }

[lib]
name = "glory"
path = "src/lib.rs"


[features]
default = []
web-csr = ["glory-core/web-csr", "glory-routing?/web-csr"]
web-ssr = ["glory-core/web-ssr", "glory-routing?/web-ssr"]
# Command-stream extras for desktop / native / TUI hosts (CommandHolder,
# EventData-typed listeners). Combines with web-ssr; not with web-csr on wasm.
backend-command = ["glory-core/backend-command"]
salvo = ["web-ssr", "glory-core/salvo", "routing", "glory-routing?/salvo"]
routing = ["dep:glory-routing", "dep:glory-macros"]
# `#[server]` functions. NOTE: the macro expands to `glory_serverfn::...`
# paths, so app crates must also list `glory-serverfn` as a direct
# dependency (same pattern as serde + serde_json).
server-fn = ["dep:glory-macros", "dep:glory-serverfn"]

[dependencies]
glory-core = { workspace = true }
glory-routing = { workspace = true, optional = true }
glory-macros = { workspace = true, optional = true }
glory-serverfn = { workspace = true, optional = true }

# [package.metadata.cargo-all-features]
# denylist = ["stable"]
# skip_feature_sets = [["web-ssr"]]

[lints]
workspace = true
