[package]
name = "glory-hot-reload"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Utility types used for dev mode and hot-reloading for the Glory web framework."
readme = { workspace = true }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = [
	"full",
	"parsing",
	"extra-traits",
	"visit",
	"printing",
] }
quote = "1"
rstml = "0.11.0"
proc-macro2 = { version = "1", features = ["span-locations", "nightly"] }
parking_lot = "0.12"
walkdir = "2"
camino = "1.1.3"
indexmap = "2"
