[package]
name = "glory-macros"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Proc macros for the Glory framework (#[server] functions)."
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory-macros/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
