[package]
name = "glory-native"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Native renderer scaffold for Glory."
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory-native/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
anyrender_vello = { version = "0.6", optional = true }
blitz-dom = { version = "0.2.4", optional = true }
blitz-shell = { version = "0.2.3", optional = true, default-features = false }
blitz-traits = { version = "0.2.0", optional = true, default-features = false }
glory-core = { workspace = true }
serde_json = { workspace = true, optional = true }
winit = { version = "0.30.2", optional = true, features = ["rwh_06"] }

[lints]
workspace = true

[features]
# Experimental Blitz consumer: applies Command batches to a blitz-dom
# BaseDocument (the spike for a native non-webview renderer).
blitz = ["dep:blitz-dom", "glory-core/backend-command"]
shell = ["blitz", "dep:anyrender_vello", "dep:blitz-shell", "dep:blitz-traits", "dep:serde_json", "dep:winit"]
accessibility = ["shell", "blitz-dom/accessibility", "blitz-shell/accessibility"]
